# montana

./: .gitignore  Cargo.toml  Justfile  README.md  SPEC.md  hi.json  lychee.toml  rustfmt.toml  zepter.yaml
.github/workflows/: ci.yml
benchmarks/: METHODOLOGY.md  README.md  RESULTS.md  compare.sh
benchmarks/fixtures/: blocks_1.json  blocks_10.json
benchmarks/op-stack/: batch_building_test.go  compression_test.go  derivation_test.go  generate_fixtures.go  go.mod  go.sum
crates/anvil/src/: manager.rs  sink.rs
crates/batcher/: Cargo.toml  README.md
crates/batcher/src/: error.rs  lib.rs
crates/brotli/: Cargo.toml  README.md
crates/brotli/src/: compressor.rs  lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cli.rs  compression.rs  lib.rs  mode.rs  tracing.rs
crates/common/chainspec/: Cargo.toml  README.md
crates/common/chainspec/src/: anvil.rs  base.rs  lib.rs
crates/common/channel/: Cargo.toml  README.md
crates/common/channel/src/: errors.rs  execute.rs  lib.rs  source.rs
crates/common/primitives/: Cargo.toml  README.md
crates/common/primitives/src/: batch_header.rs  compressed_batch.rs  l2_block_data.rs  lib.rs  op_block.rs  submission_receipt.rs
crates/common/sequencer/: Cargo.toml  README.md
crates/common/sequencer/src/: buffer.rs  convert.rs  errors.rs  lib.rs
crates/consensus/anvil/: Cargo.toml  README.md
crates/consensus/anvil/src/: error.rs  lib.rs  manager.rs  sink.rs  source.rs
crates/consensus/anvil/tests/: blob_roundtrip.rs
crates/consensus/batch-context/: Cargo.toml  README.md
crates/consensus/batch-context/src/: lib.rs
crates/consensus/batch-runner/: Cargo.toml  README.md
crates/consensus/batch-runner/src/: config.rs  error.rs  lib.rs  metrics.rs  rpc.rs  runner.rs  source.rs
crates/consensus/batcher/: Cargo.toml  README.md
crates/consensus/batcher/src/: config.rs  context.rs  driver.rs  error.rs  lib.rs  metrics.rs  mode.rs  service.rs
crates/consensus/block-feeder/: Cargo.toml  README.md
crates/consensus/block-feeder/src/: lib.rs
crates/consensus/brotli/: README.md
crates/consensus/brotli/src/: lib.rs
crates/consensus/cli/src/: lib.rs
crates/consensus/derivation-runner/: Cargo.toml  README.md
crates/consensus/derivation-runner/src/: config.rs  error.rs  lib.rs  metrics.rs  runner.rs
crates/consensus/local/: README.md
crates/consensus/local/benches/: pipeline.rs
crates/consensus/local/src/: compressor.rs  error.rs  lib.rs  sink.rs  source.rs
crates/consensus/pipeline/: Cargo.toml  README.md
crates/consensus/pipeline/src/: codec.rs  compressor.rs  execute.rs  lib.rs  sink.rs  source.rs
crates/consensus/txmgr/: Cargo.toml
crates/consensus/txmgr/src/: builder.rs  candidate.rs  config.rs  gas.rs  lib.rs  monitor.rs  state.rs  submitter.rs
crates/consensus/zlib/: Cargo.toml
crates/consensus/zlib/src/: lib.rs
crates/consensus/zstd/src/: lib.rs
crates/execution/blocksource/: Cargo.toml  README.md
crates/execution/blocksource/src/: convert.rs  lib.rs  rpc.rs  types.rs
crates/execution/blocksource/src/producer/: channel.rs  historical.rs  live.rs  mod.rs  rpc.rs
crates/execution/chainspec/: Cargo.toml
crates/execution/chainspec/src/: lib.rs
crates/execution/database/: Cargo.toml  README.md
crates/execution/database/src/: cached.rs  errors.rs  kvdb.rs  lib.rs  remote.rs  traits.rs  triedb.rs
crates/execution/execution/: Cargo.toml  README.md
crates/execution/execution/src/: executor.rs  lib.rs
crates/execution/migration/: Cargo.toml  README.md
crates/execution/migration/src/: lib.rs  migrator.rs
crates/execution/migration/src/reth/: account.rs  bytecode.rs  compact.rs  mod.rs  storage.rs
crates/execution/runner/: Cargo.toml  README.md
crates/execution/runner/src/: execution.rs  lib.rs  mode.rs  verification.rs
crates/execution/vm/: Cargo.toml  README.md
crates/execution/vm/src/: executor.rs  lib.rs
crates/local/: Cargo.toml  README.md
crates/local/benches/: pipeline.rs
crates/local/src/: compressor.rs  error.rs  sink.rs  source.rs
crates/node/checkpoint/: Cargo.toml  README.md
crates/node/checkpoint/src/: lib.rs
crates/node/node/: Cargo.toml  README.md
crates/node/node/src/: builder.rs  config.rs  events.rs  lib.rs  observer.rs  role.rs  stage.rs  state.rs  sync.rs
crates/node/roles/: Cargo.toml  README.md
crates/node/roles/src/: lib.rs  sequencer.rs  validator.rs
crates/node/runtime/: Cargo.toml  README.md
crates/node/runtime/src/: builder.rs  headless.rs  lib.rs  tui.rs
crates/pipeline/: Cargo.toml  README.md
crates/pipeline/src/: codec.rs  constants.rs  error.rs  lib.rs  sink.rs  source.rs
crates/txmgr/: Cargo.toml  README.md
crates/txmgr/src/: config.rs  error.rs  nonce.rs
crates/utilities/adapters/: Cargo.toml  README.md
crates/utilities/adapters/src/: lib.rs
crates/utilities/cli/: Cargo.toml
crates/utilities/cli/src/: cli.rs  compression.rs  ctrlc.rs  lib.rs  mode.rs  montana_cli.rs  montana_mode.rs  tracing_init.rs
crates/utilities/harness/: Cargo.toml  README.md
crates/utilities/harness/genesis/: anvil_state.json
crates/utilities/harness/src/: anvil_state.rs  config.rs  harness.rs  lib.rs  progress.rs
crates/utilities/harness/tests/: integration.rs
crates/utilities/tui/: Cargo.toml  README.md
crates/utilities/tui-common/: Cargo.toml  README.md
crates/utilities/tui-common/src/: helpers.rs  lib.rs  log.rs  render.rs
crates/utilities/tui/src/: app.rs  (+5 more)
crates/zlib/: README.md
crates/zlib/src/: compressor.rs
crates/zstd/: Cargo.toml  README.md
crates/zstd/src/: compressor.rs  lib.rs
examples/analyze/: Cargo.toml
examples/analyze/src/: main.rs
examples/executor/: Cargo.toml
examples/executor/src/: main.rs
examples/fetcher/: Cargo.toml  README.md
examples/fetcher/src/: main.rs
examples/migrate/: Cargo.toml  README.md
examples/migrate-bytecode/: Cargo.toml  README.md
examples/migrate-bytecode/src/: main.rs
examples/migrate/src/: main.rs
examples/shadow/: Cargo.toml  README.md
examples/shadow/src/: main.rs
static/: base_mainnet_blocks.json
static/remote-db/: 0.json
