[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
homepage = "https://github.com/base/montana"
repository = "https://github.com/base/montana"

[workspace]
resolver = "2"
members = ["bin/*", "crates/*"]
default-members = ["bin/montana", "bin/analyze"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# local
montana-brotli = { path = "crates/brotli" }
montana-cli = { path = "crates/cli" }
montana-local = { path = "crates/local" }
montana-pipeline = { path = "crates/pipeline" }
montana-zlib = { path = "crates/zlib" }
montana-zstd = { path = "crates/zstd" }

# async
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }

# compression
brotli = "8"
flate2 = "1"
zstd = "0.13"

# misc
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# testing
criterion = { version = "0.5", features = ["async_tokio"] }
rstest = "0.24"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
