[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
homepage = "https://github.com/base/montana"
repository = "https://github.com/base/montana"

[workspace]
resolver = "2"
members = ["bin/*", "crates/*"]
default-members = ["bin/montana", "bin/analyze"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# local
montana-batcher = { path = "crates/batcher" }
montana-brotli = { path = "crates/brotli" }
montana-cli = { path = "crates/cli" }
montana-local = { path = "crates/local" }
montana-pipeline = { path = "crates/pipeline" }
montana-txmgr = { path = "crates/txmgr" }
montana-zlib = { path = "crates/zlib" }
montana-zstd = { path = "crates/zstd" }

# async
async-trait = "0.1.89"
reqwest = "0.12.26"

# compression
brotli = "8.0.2"
flate2 = "1.1.5"
zstd = "0.13.3"

# alloy
alloy = "1.0"

# misc
clap = "4.5.53"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"

# testing
criterion = "0.8.1"
rstest = "0.26.1"
tokio = "1.48.0"
