[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
license = "MIT"
homepage = "https://github.com/base/montana"
repository = "https://github.com/base/montana"

[workspace]
resolver = "2"
members = ["bin/*", "examples/*", "crates/common/*", "crates/consensus/*", "crates/execution/*", "crates/utilities/*"]
default-members = ["bin/montana"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# consensus crates
montana-anvil = { version = "0.0.1", path = "crates/consensus/anvil" }
montana-batch-context = { version = "0.0.1", path = "crates/consensus/batch-context" }
montana-batch-runner = { version = "0.0.1", path = "crates/consensus/batch-runner" }
montana-batcher = { version = "0.0.1", path = "crates/consensus/batcher" }
montana-brotli = { version = "0.0.1", path = "crates/consensus/brotli" }
montana-derivation-runner = { version = "0.0.1", path = "crates/consensus/derivation-runner" }
montana-local = { version = "0.0.1", path = "crates/consensus/local" }
montana-pipeline = { version = "0.0.1", path = "crates/consensus/pipeline" }
montana-txmgr = { version = "0.0.1", path = "crates/consensus/txmgr" }
montana-zlib = { version = "0.0.1", path = "crates/consensus/zlib" }
montana-zstd = { version = "0.0.1", path = "crates/consensus/zstd" }

# utilities crates
montana-cli = { version = "0.0.1", path = "crates/utilities/cli" }
montana-tui = { version = "0.0.1", path = "crates/utilities/tui" }
montana-tui-common = { version = "0.0.1", path = "crates/utilities/tui-common" }

# common crates
chainspec = { path = "crates/common/chainspec" }
channels = { path = "crates/common/channel" }
primitives = { path = "crates/common/primitives" }
sequencer = { path = "crates/common/sequencer" }

# execution crates
blocksource = { path = "crates/execution/blocksource" }
database = { path = "crates/execution/database" }
runner = { path = "crates/execution/runner" }
vm = { path = "crates/execution/vm" }

# async
async-trait = "0.1.89"
reqwest = "0.12.26"

# compression
brotli = "8.0.2"
flate2 = "1.1.5"
zstd = "0.13.3"

# alloy
alloy = { version = "1.1.3", features = ["full", "rpc-types-trace"] }
alloy-primitives = { version = "1.5.0", features = ["rlp", "serde"] }
alloy-rlp = { version = "0.3.12", features = ["derive"] }
alloy-trie = "0.9"
alloy-op-hardforks = "0.4.5"
alloy-chains = "0.2.1"

# OP Stack types
op-alloy = { version = "0.23.1", features = ["consensus", "network", "rpc-types"] }

# REVM dependencies
revm = { version = "33.1.0", default-features = false, features = ["std", "secp256k1", "c-kzg", "blst", "serde"] }
op-revm = { version = "14.1.0" }

# misc
clap = { version = "4.5.53", features = ["derive", "env"] }
derive_more = { version = "2", features = ["full"] }
eyre = "0.6.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# tui
crossterm = "0.28.1"
ratatui = "0.29.0"

# testing
criterion = "0.8.1"
rstest = "0.26.1"
tempfile = "3"
tokio = { version = "1.48.0", features = ["full"] }

# TrieDB - Ethereum state trie database
triedb = { git = "https://github.com/base/triedb" }
