[package]
name = "migrate-bytecode"
description = "Migrate Reth Bytecodes table to RocksDB"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
migration.workspace = true

alloy-primitives.workspace = true
clap = { workspace = true, features = ["derive"] }
eyre.workspace = true
rocksdb.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
