[package]
name = "migrate"
description = "Migrate Reth MDBX database to TrieDB"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
migration.workspace = true

clap = { workspace = true, features = ["derive"] }
eyre.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
