[package]
name = "channels"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
derive_more.workspace = true
primitives.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
