[package]
name = "primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy.workspace = true
op-alloy.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
