[package]
name = "sequencer"
description = "Sequencer buffer bridging execution to batch submission"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# common crates
channels.workspace = true
derive_more.workspace = true

# execution crates
blocksource.workspace = true

# OP Stack types
op-alloy.workspace = true
alloy-rlp.workspace = true

# async
async-trait.workspace = true
tokio.workspace = true

# misc
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
