[package]
name = "montana-anvil"
description = "Anvil integration for Montana - Local chain management for testing and development"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# internal crates
montana-pipeline.workspace = true

# alloy - for anvil node-bindings and providers
alloy = { version = "1.0", default-features = false, features = [
    "consensus",
    "eips",
    "k256",
    "network",
    "node-bindings",
    "provider-http",
    "rpc-types",
    "signer-local",
    "std",
] }

# async
async-trait.workspace = true

# misc
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
