[package]
name = "montana-batch-context"
description = "Montana Batch Context - Sink and Source abstractions for batch submission modes"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# consensus crates
montana-anvil.workspace = true
montana-batcher.workspace = true
montana-pipeline.workspace = true

# async
async-trait.workspace = true
tokio.workspace = true

# misc
thiserror.workspace = true
