[package]
name = "montana-batcher"
description = "Batcher service for L2 batch submission orchestration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
montana-pipeline = { workspace = true }
montana-txmgr = { workspace = true }
montana-anvil = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
