[package]
name = "montana-derivation-runner"
description = "Derivation pipeline runner for batch decompression and derivation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
montana-pipeline = { workspace = true }
montana-checkpoint = { workspace = true }
primitives = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
thiserror = { workspace = true }
tracing = { workspace = true }

# Execution
database.workspace = true
vm.workspace = true

[dev-dependencies]
async-trait = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tempfile.workspace = true
montana-harness.workspace = true
chainspec.workspace = true
