[package]
name = "montana-pipeline"
description = "Core pipeline traits and types for Montana"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
channels.workspace = true
primitives.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
