[package]
name = "montana-txmgr"
description = "Transaction manager for L1 batch submission with blob and calldata support"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy = { version = "1.0", default-features = false, features = [
    "consensus",
    "eips",
    "k256",
    "network",
    "provider-http",
    "rpc-types",
    "signer-local",
    "std",
] }

# async
tokio = { workspace = true, features = ["sync", "time"] }

# misc
thiserror.workspace = true

[dev-dependencies]
alloy = { version = "1.0", features = ["node-bindings"] }
rstest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
