[package]
name = "montana-zlib"
description = "Zlib compression implementation for Montana"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
montana-pipeline.workspace = true
flate2.workspace = true

[dev-dependencies]
rstest.workspace = true
