[package]
name = "database"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
alloy.workspace = true
op-alloy.workspace = true
revm.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
triedb.workspace = true

[dev-dependencies]
alloy-trie.workspace = true
tempfile.workspace = true

[lints]
workspace = true
