[package]
name = "runner"
description = "Block execution runner"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# execution crates
blocksource.workspace = true
vm.workspace = true

# alloy
alloy.workspace = true
op-alloy.workspace = true

# async
tokio.workspace = true

# misc
tracing.workspace = true
