[package]
name = "montana-node"
description = "Core node abstractions for Montana"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
montana-checkpoint = { workspace = true }
montana-roles = { workspace = true }
blocksource = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
