[package]
name = "montana-roles"
description = "Role abstractions for Montana node"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
montana-checkpoint = { workspace = true }
async-trait.workspace = true
eyre.workspace = true
