[package]
name = "montana-runtime"
description = "Montana runtime functions for node building and execution"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# execution crates
blocksource.workspace = true

# alloy
alloy.workspace = true
op-alloy.workspace = true

# common crates
primitives.workspace = true

# consensus crates
montana-batch-context.workspace = true
montana-batcher.workspace = true
montana-block-feeder.workspace = true
montana-brotli.workspace = true
montana-checkpoint.workspace = true

# node crates
montana-node.workspace = true
montana-roles.workspace = true

# utilities
montana-adapters.workspace = true
montana-cli.workspace = true
montana-harness.workspace = true
montana-tui.workspace = true

# async
tokio.workspace = true

# misc
crossterm = { workspace = true, features = ["event-stream"] }
eyre.workspace = true
ratatui.workspace = true
tracing.workspace = true
