[package]
name = "montana-adapters"
description = "Adapter types for Montana binary"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# async
async-trait.workspace = true
tokio.workspace = true

# execution crates
blocksource.workspace = true

# consensus crates
montana-batch-context.workspace = true
montana-pipeline.workspace = true

# node crates
montana-roles.workspace = true

# utilities
montana-harness.workspace = true
montana-tui.workspace = true

# misc
eyre.workspace = true
